# bundlegame_no_company

./: .env.example  .firebaserc  .github_cleanup_commands.txt  .gitignore  CITY_PERFORMANCE_ANALYSIS.md  COMPLETE_PACKAGE_SUMMARY.md  CONTRIBUTING.md  DEVELOPER_QUICK_REFERENCE.md  EXPERIMENT_DESIGN_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  REPO_REORGANIZATION_SUMMARY.md  SECURITY.md  SETUP.md  START_HERE.md  deploy-security.sh  experiment_order_details.csv  experiment_scenario_table.csv  firestore.rules  package-lock.json  package.json  validate_experiment_orders.py
data analysis/analytics_v1/: README.md  pyproject.toml
data analysis/analytics_v1/analytics/: __init__.py  cli.py  config.py  types.py
data analysis/analytics_v1/analytics/io/: firestore_adapter.py  json_adapter.py
data analysis/analytics_v1/analytics/model/: __init__.py  scorer.py  time_model.py
data analysis/analytics_v1/analytics/pipeline/: __init__.py  decision_fact.py  normalize.py
data analysis/analytics_v1/analytics/qa/: checks.py
data analysis/analytics_v1/analytics/stats/: __init__.py  comparisons.py  intervals.py  point_estimates.py
data analysis/analytics_v1/tests/: test_cli_integration.py  test_decision_fact.py  test_intervals.py
data analysis/analytics_v1/tests/fixtures/: cities_fixture.json  participants_fixture.json  scenario_bundle_fixture.json  stores_fixture.json
docs/: EXPERIMENT_DESIGN.md  README.md
scripts/: backfill-user-summary.mjs  check-grouped-metadata.mjs  clean-grouped-metadata.mjs  delete-legacy-masterdata.mjs  generate-auth-token.mjs  inspect-masterdata.mjs  (+9 more)
(+61 files in other folders)
