[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-v1"
version = "0.1.0"
description = "Participant vs optimal analytics pipeline for BundleGame"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
firestore = ["google-cloud-firestore>=2.16.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["analytics*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
